@@ -1,3 +1,8 @@
+2013-07-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/proj_etmerc.c: Fix two errors in the n**5 coefficients.  Add 
+	sixth order coefficients.  Fix rounding problems (#222)
+
 2013-07-19  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/PJ_healpix.c: major update for polar scaling and parms (#219)
